Removed typescript from server code
